--- a/templates/profile.html
+++ b/templates/profile.html
@@ -66,8 +66,13 @@
               <div class="column right">
                 <div class="header-content-inner">
                     <h1>Hello {{user.nickname}}</h1>
-                    <h3>Name: {{user.nickname}}</h3>
+                <!--    <h3>Name: {{user.nickname}}</h3> -->
                     <h3>Email: {{user.email}}</h3>
+                    <section class="content">
+                        <div class="container">
+                          <a href="/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
+                        </div>
+                    </section>
                 </div>
               </div>
               </div>
@@ -76,11 +81,7 @@
 
 
 
-      <section class="content">
-          <div class="container">
-            <a href="/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
-          </div>
-      </section>
+
 
 
 
