--- a/templates/profile.html
+++ b/templates/profile.html
@@ -70,7 +70,7 @@
                     <h3>Email: {{user.email}}</h3>
                     <section class="content">
                         <div class="container">
-                          <a href="/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
+                          <a href="/profile/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
                         </div>
                     </section>
                 </div>
