--- a/templates/profile.html
+++ b/templates/profile.html
@@ -65,12 +65,12 @@
               </div>
               <div class="column right">
                 <div class="header-content-inner">
-                    <h1>Hello {{user.nickname}}</h1>
+                    <h1>Hello There: {{user.nickname}}</h1>
                 <!--    <h3>Name: {{user.nickname}}</h3> -->
                     <h3>Email: {{user.email}}</h3>
                     <section class="content">
                         <div class="container">
-                          <a href="/profile/post" class="btn btn-primary btn-lg">Post Your Experience!</a>
+                          <a href="/profile-post" class="btn btn-primary btn-lg">Post Your Experience!</a>
                         </div>
                     </section>
                 </div>
