added post button on community page

--- a/templates/community.html
+++ b/templates/community.html
@@ -47,6 +47,13 @@
               </div>
           </div>
       </header>
+
+      <section class="content">
+          <div class="container">
+            <a href="/community-post" class="btn btn-primary btn-lg">Post An</br>Opportunity</a>
+          </div>
+      </section>
+
       {% for each_post in post_list %}
       <p>
         <b>Event Name: </b> {{each_post.post_name}} </br>
