--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,7 +46,7 @@
             <div class="row">
               <div class="column left">
                 <label for="avatar"> Profile Picture </label>
-                <img src="data:image/jpg;base64,{{profilepic}}" width="300px" height="300px">
+                <img class = "profile_img" src="data:image/jpg;base64,{{profilepic}}" width="300px" height="300px">
 
                 <div>
                    <form method="post" enctype="multipart/form-data">
