--- a/templates/friends.html
+++ b/templates/friends.html
@@ -48,9 +48,30 @@
           </div>
       </header>
 
-<!-- image and user -->
-  <img src="data:image/jpg;base64,{{profilepic}}" width="50px" height="50px"> <b> {{user.nickname}} </b> </br>
-<!-- -->
+
+
+<fieldset>
+  {% for each_post in post_list %}
+
+  <div class="row1">
+    <!--<div class ="bigcolumn left"> -->
+        <div class="smallcolumn left1 ">
+            <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
+        </div>
+        <div class= "smallcolumn right1">
+            <p>
+              <b>Event Name: </b> {{each_post.post_name}} </br>
+              <b>Location: </b> {{each_post.post_location}} </br>
+              <b>Description: </b> {{each_post.post_event}}
+            </p>
+        </div>
+    </div>
+  </div>
+
+</div>
+</br>
+{% endfor %}
+</fieldset>
 
 
     <footer class="page-footer">
