--- a/templates/home.html
+++ b/templates/home.html
@@ -35,13 +35,13 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="community">Community</a>
+                        <a href="community">{{community}}</a>
                     </li>
                     <li>
-                        <a href="friends">Friends</a>
+                        <a href="friends">{{friends}}</a>
                     </li>
                     <li>
-                        <a href="profile">Profile</a>
+                        <a href="profile">{{profile}}</a>
                     </li>
                 </ul>
 
