--- a/templates/friends.html
+++ b/templates/friends.html
@@ -58,7 +58,10 @@
         <div class="smallcolumn left1 ">
             <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
         </div>
+        <!--{% for all_post in friends_list %}
         <div class= "smallcolumn right1">
+          <img src="data:image/jpg;base64,{{all_post.profile_pic}}" width="50px" height="50px"> <b> {{all_post.nickname}} </b> </br>
+        {% endfor %}-->
             <p>
               <b>Event Name: </b> {{each_post.post_name}} </br>
               <b>Location: </b> {{each_post.post_location}} </br>
