--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
     <link href="../css/custom.css" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
@@ -25,7 +26,7 @@
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Logo -->
-
+            
                 <a class="navbar-brand" href="#">
 
                 	SERVE + CONNECT
@@ -53,7 +54,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Serve + Connect</h1>
+                <h1 class="title-font">serve + connect</h1>
                 <p>From Compassion to Action</p>
 
              <form method='get' id='login'>
