--- a/css/community.css
+++ b/css/community.css
@@ -1,3 +1,24 @@
+.smallcolumn {
+    float: left;
+    padding: 30px;
+    height: 300px;
+}
+/* Clear floats after the columns */
+.left1 {
+  width: 30%;
+}
+
+.right1 {
+  width: 30%;
+}
+
+/* Clear floats after the columns */
+.row1:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 html,
 body {
     width: 100%;
