--- a/templates/friends.html
+++ b/templates/friends.html
@@ -51,17 +51,17 @@
 
 
 <fieldset>
-  {% for each_post in post_list %}
-
   <div class="row1">
+  </br>
+  {% for all_post in friends_list %}
+    <img src="data:image/jpg;base64,{{all_post.profile_pic}}" width="50px" height="50px"> <b> {{all_post.nickname}} </b> </br>
+    {% endfor %}
+  {% for each_post in post_list %}
     <!--<div class ="bigcolumn left"> -->
         <div class="smallcolumn left1 ">
             <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
         </div>
-        <!--{% for all_post in friends_list %}
         <div class= "smallcolumn right1">
-          <img src="data:image/jpg;base64,{{all_post.profile_pic}}" width="50px" height="50px"> <b> {{all_post.nickname}} </b> </br>
-        {% endfor %}-->
             <p>
               <b>Event Name: </b> {{each_post.post_name}} </br>
               <b>Location: </b> {{each_post.post_location}} </br>
@@ -69,11 +69,9 @@
             </p>
         </div>
     </div>
-  </div>
-
-</div>
+  {% endfor %}
 </br>
-{% endfor %}
+
 </fieldset>
 
 
