--- a/templates/profile.html
+++ b/templates/profile.html
@@ -84,7 +84,7 @@
 
       <fieldset>
         {% for each_post in post_list %}
-
+          <img src="data:image/jpg;base64,{{each_post.profile_pic}}" width="50px" height="50px"> <b> {{each_post.nickname}} </b> </br>
         <div class="row1">
           <!--<div class ="bigcolumn left"> -->
               <div class="smallcolumn left1 ">
