changes by lina

--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -54,10 +54,12 @@
       <legend> Post </legend>
         <div>
           <form method="post" enctype="multipart/form-data">
-          <b> Event Name: </b> <input name=post_name />
-        <b>   Location: </b><input name=post_location  />
+          <b> Event Name: </b> <input name=post_name placeholder="Required"/>
+        <b>   Location: </b><input name=post_location  placeholder="Required"/>
             </br>
-              <b>Event Description: </b><textarea name=post_event width= "300px"
+            <b> Date: </b><input name=post_date placeholder="Required"/>
+          </br>
+              <b>Event Description: </b><textarea placeholder="Required" name=post_event width= "300px"
                 height= "44px"></textarea>
           </br>
 
