--- a/css/profile.css
+++ b/css/profile.css
@@ -355,3 +355,18 @@ section {
   grid-template-columns: 33% 33% 33%
 
 }
+
+.image_featured {
+  display: block;
+  width: 100%;
+
+}
+
+.row {
+  margin-bottom: 50px;
+}
+
+p {
+  text-align: left;
+  color: #777
+}
