--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Post Your Experience</title>
     <link rel="stylesheet" href="../css/profile.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
