--- a/css/friends.css
+++ b/css/friends.css
@@ -31,7 +31,7 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color: #fff;
+    color: #FEF6EB;
     background-image: url('../templates/images/freinds-background.jpg');
     background-position: center;
     background-size: cover;
