--- a/templates/profile.html
+++ b/templates/profile.html
@@ -67,7 +67,7 @@
                     <!-- <h3>Email: {{user.email}}</h3> -->
                     <section class="content">
                         <div>
-                          <a href="/profile-post" class="btn btn-primary btn-lg">Post Your Experience!</a>
+                          <a href="/profile-post" class="btn btn-primary btn-lg">Post About Your Experience!</a>
                         </div>
                     </section>
                 </div>
@@ -82,7 +82,7 @@
         <div class = "user_container">
           <div class = "profile_post_header">
             <h2>
-              Your Volunteer Posts</br>
+              Your Volunteer Posts:</br>
             </h2>
           </div>
         </div>
@@ -114,48 +114,6 @@
             </div>
           </section>
 
-
-
-<<<<<<< HEAD
-=======
-
-
-    <!--  <fieldset>
-        {% for each_post in post_list %}
-          <img src="data:image/jpg;base64,{{each_post.profile_pic}}" width="50px" height="50px"> <b> {{each_post.nickname}} </b> </br>
-        <div class="row1">
-          <!--<div class ="bigcolumn left"> -->
-          <!--    <div class="smallcolumn left1 ">
-                  <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
-              </div>
-              <div class= "smallcolumn right1">
-                  <p>
-                    <b>Event Name: </b> {{each_post.post_name}} </br>
-                    <b>Location: </b> {{each_post.post_location}} </br>
-                    <b>Description: </b> {{each_post.post_event}}
-                  </p>
-              </div>
-          </div>
-        </div>
-
-        <!--    <div class ="bigcolumn right">
-                <div class="smallcolumn left2 ">
-                    <img src="data:image/jpg;base64,{{each_post.image}}" width="400px" height="300px"> </br>
-                </div>
-                <div class= "smallcolumn right2">
-                    <p>
-                      <b>Event Name: </b> {{each_post.post_name}} </br>
-                      <b>Location: </b> {{each_post.post_location}} </br>
-                      <b>Description: </b> {{each_post.post_event}}
-                    </p>
-                </div>
-            </div>
-      </div>
-    </br>
-      {% endfor %}
-    </fieldset>-->
-
->>>>>>> 1b7d430be6ddbaf9717eaa59593a73857690836f
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
@@ -166,14 +124,10 @@
 
     </footer>
 
-    <!-- jQuery -->
     <script src="../js/jquery-1.11.3.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
     <script src="../js/bootstrap.min.js"></script>
 
-
-    <!-- Custom Javascript -->
     <script src="../js/custom.js"></script>
 
   </body>
