--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Logo -->
-            
+
                 <a class="navbar-brand" href="#">
 
                 	SERVE + CONNECT
@@ -107,7 +107,7 @@
         <div class="small-print">
         	<div class="container">
         		<p>Team Git Coding:</br>
-              Erik, Jordan, Lina</p>
+              Erik Handeland, Jordan Huyghue, Lina Park</p>
         	</div>
         </div>
 
