--- a/css/community.css
+++ b/css/community.css
@@ -1,3 +1,10 @@
+input{
+  background: rgba(255,255,255,0.4);
+  box-shadow: 0 2px 10px 1px rgba(0,0,0,0.5);
+}
+
+
+
 .smallcolumn {
     float: left;
     padding: 30px;
@@ -41,6 +48,7 @@ a:focus {
 p {
     font-size: 16px;
     line-height: 1.5;
+
 }
 
 header {
@@ -112,7 +120,12 @@ header .header-content .header-content-inner p {
     margin-bottom: 20px;
 }
 
-
+.btn-sm {
+    padding: 10px 15px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
 .content {
     padding: 100px 0;
 }
