--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
 
@@ -64,7 +64,7 @@
           </br>
 
           <div>
-            <label for="avatar"> Picture </label>
+            <label for="avatar"> <i class="material-icons md-56">add_a_photo</i></label>
             <input type="file" id="avatar" name="image"
                 accept="image/png, image/jpeg" />
             <button>Post</button>
