fixed erik's name link

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -101,7 +101,7 @@
                     <h3></b> {{each_post.post_name}}</h3>
                   </div>
                   <p>
-                    <b>Location: </b> {{each_post.post_location}}    <b>Date: </b> {{each_post.post_date}}
+                    <i><b>Location: </b> {{each_post.post_location}} <b>Date: </b> {{each_post.post_date}} </i>
                   </br>
                   </br>
                    {{each_post.post_event}}
@@ -119,7 +119,7 @@
         <div class="small-print">
           <div class="container">
             <p class="footer">Team Git Coding:</br>
-              <a href="www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
           </div>
         </div>
 
