--- a/templates/home.html
+++ b/templates/home.html
@@ -107,7 +107,7 @@
         <div class="small-print">
         	<div class="container">
         		<p>Team Git Coding:</br>
-              <a href="www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
         	</div>
         </div>
 
