fixed some css on post pages

--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
 
@@ -54,18 +54,22 @@
     <fieldset>
       <legend> Post </legend>
         <div>
-          <form method="post" enctype="multipart/form-data">
+          <center><form method="post" enctype="multipart/form-data">
           <b> Event Name: </b> <input name=post_name placeholder="Required"/>
-        <b>   Location: </b><input name=post_location  placeholder="Required"/>
-            </br>
+        </br>
+        </br>
+          <b> Location: </b><input name=post_location  placeholder="Required"/>
+        </br>
+        </br>
             <b> Date: </b><input name=post_date placeholder="Required"/>
-          </br>
+        </br>
+        </br>
               <b>Event Description: </b><textarea placeholder="Required" name=post_event width= "300px"
                 height= "44px"></textarea>
           </br>
 
           <div>
-            <label for="avatar"> Picture </label>
+            <label for="avatar"><i class="material-icons md-56">add_a_photo</i></label>
             <input type="file" id="avatar" name="image"
                 accept="image/png, image/jpeg" />
             <button>Post</button>
@@ -84,7 +88,7 @@
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
-            <p>Team Git Coding:</br>
+            <p class="footer">Team Git Coding:</br>
               <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
           </div>
         </div>
