--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -54,13 +54,13 @@
     <fieldset>
       <legend> Post </legend>
         <div>
-          <form method="post" enctype="multipart/form-data">
-          <b> Event Name: </b> <input name=post_name placeholder="Required"/>
-          <b> Location: </b><input name=post_location  placeholder="Required"/>
-          <b> Date: </b><input name=post_date placeholder="Required"/>
+          <center><form method="post" enctype="multipart/form-data">
+          <b> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
+          <b> Location: </b><input name=post_location  placeholder="Required"/></br></br>
+          <b> Date: </b><input name=post_date placeholder="Required"/></br></br>
             </br>
-              <b>Event Description: </b><textarea placeholder="Required" name=post_event width= "300px"
-                height= "44px"></textarea>
+              <b>Event Description: </b></br><textarea placeholder="Required" name=post_event width= "300px"
+                height= "400px"></textarea>
           </br>
 
           <div>
@@ -68,7 +68,7 @@
             <input type="file" id="avatar" name="image"
                 accept="image/png, image/jpeg" />
             <button>Post</button>
-          </form>
+          </form></center>
           </div>
 
 
@@ -83,7 +83,7 @@
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
-            <p lass="footer">Team Git Coding:</br>
+            <p class="footer">Team Git Coding:</br>
               <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
           </div>
         </div>
