--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -12,8 +12,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
 
-
-  <body>
+  <body style="background:#74828F">
     <!-- Navigation -->
     <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -51,15 +50,14 @@
 
       <section class="content">
         <ul>
-    <fieldset>
-      <legend> Post </legend>
+    </br>
+    </br>
         <div>
           <center><form method="post" enctype="multipart/form-data">
-          <b> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
-          <b> Location: </b><input name=post_location  placeholder="Required"/></br></br>
-          <b> Date: </b><input name=post_date placeholder="Required"/></br></br>
-            </br>
-              <b>Event Description: </b></br><textarea placeholder="Required" name=post_event width= "300px"
+            <b style="color: #ede6df; font-size: 24px"> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
+            <b style="color: #ede6df; font-size: 24px"> Location: </b><input name=post_location  placeholder="Required"/></br></br>
+            <b style="color: #ede6df; font-size: 24px"> Date: </b><input name=post_date placeholder="Required"/></br></br>
+              <b style="color: #ede6df; font-size: 24px">Event Description: </b></br><textarea placeholder="Required" name=post_event width= "300px"
                 height= "400px"></textarea>
           </br>
 
@@ -83,8 +81,8 @@
     <footer class="page-footer">
         <div class="small-print">
           <div class="container">
-            <p class="footer">Team Git Coding:</br>
-              <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+            <p class="footer" style="color:#d0706a; font-size: 20px; font-weight: bold; ">Team Git Coding:</br> </p>
+              <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a><a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
           </div>
         </div>
 
