--- a/css/custom.css
+++ b/css/custom.css
@@ -46,7 +46,7 @@ header .header-content .header-content-inner p {
 .title-font{
   font-family: 'Anton';
   text-shadow: 2px 2px 5px black;
-  color: #BEB9B5
+  color: #f9f3ec
 
 }
 
