--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,23 @@
+
+
+* {
+    box-sizing: border-box;
+}
+
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 #avatar{
   display: none;
 }
