--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Serve + Connect Profile</title>
   <link rel="shortcut icon" type="image/x-icon" href="../templates/images/favicon.ico"/>
-  <link rel="stylesheet" href="../css/profile.css"/>
+  <link rel="stylesheet" href="../css/about.css"/>
   <!-- Bootstrap Core CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -13,31 +13,120 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
   <body>
-    <section>
-        <h1>Erik Handeland</h1>
-        <h3>Back End Developer</h3>
-        <p>
-          Erik Handeland was born and raised in Nome, Alaska.
-          He will be attending Washington State University, where he will
-          dual major in Computer Science and Computer Engineering.
-        </p>
+      <!-- Navigation -->
+      <nav id="siteNav" class="navbar-default navbar-fixed-top" role="navigation">
+          <div class="container">
+              <!-- Logo -->
+                  <a class="navbar-brand" href="home">
+                    SERVE + CONNECT
+                  </a>
+                  <div class="collapse navbar-collapse" id="navbar">
+                      <ul class="nav navbar-nav navbar-right">
+                          <li>
+                              <a href="community">Community</a>
+                          </li>
+                          <li>
+                              <a href="friends">Friends</a>
+                          </li>
+                          <li class="active">
+                              <a href="profile"><b>Profile</b></a>
+                          </li>
+                      </ul>
 
-    </section>
-    <section>
-        <h1>Jordan</h1>
-        <h3>Front End Developer</h3>
-        <p>
-          bio
-        </p>
+                  </div><!-- /.navbar-collapse -->
+              </div><!-- /.container -->
+            </nav>
+            
+          <header class= "community_bg">
+              <div class="header-content">
+                  <div class="header-content-inner">
+                      <h1>About Us</h1>
+                  </div>
+                </div>
+            </header>
 
-    </section>
-    <section>
-        <h1>Lina</h1>
-        <h3>Front/Back End Developer</h3>
-        <p>
-          bio
-        </p>
 
-    </section>
-  </body>
+        <section>
+          <div class="rows">
+  <!--            <div class = "three_columns">-->
+              <div class="column">
+                <div class="entry">
+                  <div class="post_container">
+                  <div class = "image_featured">
+                    <img src="templates/images/lina.jpeg" width="400px" height="500px">
+                  </div>
+                  <div class = "profile_post_header">
+                  <center>  <h1> Lina Park</h1> </center>
+                  </div>
+                  <center>  <h3> Full Stack Developer </h3> </center>
+                    <p>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div class="column">
+                <div class="entry">
+                  <div class="post_container">
+                  <div class = "image_featured">
+                    <img src="templates/images/erik.jpg" width="400px" height="500px">
+                  </div>
+                  <div class = "profile_post_header">
+                    <h1><center>Erik Handeland</center></h1>
+                  </div>
+                    <h3><center>Back End Developer</center></h3>
+                    <p>
+                      Erik Handeland was born and raised in Nome, Alaska.
+                      He will be attending Washington State University, where he will
+                      dual major in Computer Science and Computer Engineering.
+                    </p>
+                </div>
+              </div>
+            </div>
+
+                <div class="column">
+                  <div class="entry">
+                    <div class="post_container">
+                    <div class = "image_featured">
+                      <img src="templates/images/jordan.jpg" width="400px" height="500px" >
+                    </div>
+                    <div class = "profile_post_header">
+                      <center>
+                      <h1>Jordan Huyghue</h1> </center>
+                    </div>
+                      <h3><center>Front End Developer</center></h3>
+                      <p>
+                        Jordan Huyghue is from the beautiful island of St. Thomas
+                          in the Virgin Islands. She will be attending the State University
+                          of New York in Binghamton and will be studying Computer Science.
+                      </p>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+<!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
+
+<footer class="page-footer">
+    <div class="small-print">
+      <div class="container">
+        <p class="footer">Team Git Coding:</br>
+          <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+      </div>
+    </div>
+
+</footer>
+
+<script src="../js/jquery-1.11.3.min.js"></script>
+
+<script src="../js/bootstrap.min.js"></script>
+
+<script src="../js/custom.js"></script>
+
+</body>
 </html>
