--- a/templates/home.html
+++ b/templates/home.html
@@ -44,6 +44,9 @@
                     <li>
                         <a href="profile">{{profile}}</a>
                     </li>
+                    <li>
+                        <a href="about">{{about}} </a>
+                    </li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
