--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -82,7 +82,11 @@
         <div class="small-print">
           <div class="container">
             <p class="footer" style="color:#d0706a; font-size: 20px; font-weight: bold; ">Team Git Coding:</br> </p>
-              <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a><a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a>
+              <a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a>
+              <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a>
+            </br> <a style="color:#96C0CE" href="http://in-tune-invalid-syntax.appspot.com"> I'm Done</a>
+            </p>
           </div>
         </div>
 
