--- a/templates/profile.html
+++ b/templates/profile.html
@@ -119,7 +119,9 @@
         <div class="small-print">
           <div class="container">
             <p class="footer">Team Git Coding:</br>
-              <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              <a href="https://www.handeland.tech">Erik Handeland,</a>
+              <a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a>
+              <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
           </div>
         </div>
 
