--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -42,18 +42,17 @@
       <header class= "community_bg">
           <div class="header-content">
               <div class="header-content-inner">
-                  <h1>Post Page</h1>
-                  <p>Share your volunteer experience below!</p>
+                  <h1>Post Page</h1
               </div>
           </div>
       </header>
 
       <section class="content">
         <ul>
-    </br>
-    </br>
         <div>
-          <center><form method="post" enctype="multipart/form-data">
+          <center>
+            <form method="post" enctype="multipart/form-data">
+            <b style="color: #ede6df; font-size: 24px">Share your volunteer experience below:</b></br>
             <b style="color: #ede6df; font-size: 24px"> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
             <b style="color: #ede6df; font-size: 24px"> Location: </b><input name=post_location  placeholder="Required"/></br></br>
             <b style="color: #ede6df; font-size: 24px"> Date: </b><input name=post_date placeholder="Required"/></br></br>
@@ -82,7 +81,10 @@
         <div class="small-print">
           <div class="container">
             <p class="footer" style="color:#d0706a; font-size: 20px; font-weight: bold; ">Team Git Coding:</br> </p>
-              <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a><a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a>
+              <a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a>
+              <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a>
+            </p>
           </div>
         </div>
 
