--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -42,18 +42,17 @@
       <header class= "community_bg">
           <div class="header-content">
               <div class="header-content-inner">
-                  <h1>Post Page</h1>
-                  <p>Share your volunteer experience below!</p>
+                  <h1>Post Page</h1
               </div>
           </div>
       </header>
 
       <section class="content">
         <ul>
-    </br>
-    </br>
         <div>
-          <center><form method="post" enctype="multipart/form-data">
+          <center>
+            <form method="post" enctype="multipart/form-data">
+            <b style="color: #ede6df; font-size: 24px">Share your volunteer experience below:</b></br>
             <b style="color: #ede6df; font-size: 24px"> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
             <b style="color: #ede6df; font-size: 24px"> Location: </b><input name=post_location  placeholder="Required"/></br></br>
             <b style="color: #ede6df; font-size: 24px"> Date: </b><input name=post_date placeholder="Required"/></br></br>
