--- a/templates/home.html
+++ b/templates/home.html
@@ -106,15 +106,12 @@
         	</div>
         </div>
 
-        <!-- Copyright etc -->
-        <div class="small-print">
-        	<div class="container">
-        		<p>Team Git Coding:</br>
-              <a href="https://www.handeland.tech">Erik Handeland,</a><a href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
-        	</div>
-        </div>
+                <p class="footer" style="color:#d0706a; font-size: 20px; font-weight: bold; ">Team Git Coding:</br> </p>
+                  <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a><a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
+              </div>
+            </div>
 
-    </footer>
+        </footer>
 
     <!-- jQuery -->
     <script src="../js/jquery-1.11.3.min.js"></script>
