--- a/templates/community.html
+++ b/templates/community.html
@@ -35,6 +35,9 @@
                     <li>
                         <a href="profile">Profile</a>
                     </li>
+                    <li>
+                        <a href="about">About</a>
+                    </li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
