--- a/templates/friends.html
+++ b/templates/friends.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="profile">Profile</a>
                     </li>
+                    <li>
+                        <a href="about">About</a>
+                    </li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
