--- a/templates/profile-post.html
+++ b/templates/profile-post.html
@@ -33,6 +33,9 @@
                     <li class="active">
                         <a href="profile"><b>Profile</b></a>
                     </li>
+                    <li>
+                        <a href="about">About</a>
+                    </li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
