--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
+              <div class="animated fadeIn slow">
                 <h1 class="title-font">serve + connect</h1>
+              </div>
                 <p>From Compassion to Action</p>
 
              <form method='get' id='login'>
