--- a/templates/about.html
+++ b/templates/about.html
@@ -108,8 +108,8 @@
                 </div>
               </div>
             </section>
-            
-      <footer class="page-footer">
+
+    <!--  <footer class="page-footer">
           <div class="small-print">
             <div class="container">
               <p class="footer" style="color:#d0706a; font-size: 20px; font-weight: bold; ">Team Git Coding:</br> </p>
@@ -117,7 +117,7 @@
             </div>
           </div>
 
-      </footer>
+      </footer> -->
 
 </body>
 </html>
