friends photo and bio updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,11 +28,11 @@
                           <li>
                               <a href="friends">Friends</a>
                           </li>
-                          <li class="active">
-                              <a href="profile"><b>Profile</b></a>
-                          </li>
                           <li>
-                              <a href="about">About</a>
+                              <a href="profile">Profile</a>
+                          </li>
+                          <li class="active">
+                              <a href="about"><b>About</b></a>
                           </li>
                       </ul>
 
@@ -56,14 +56,15 @@
                 <div class="entry">
                   <div class="post_container">
                   <div class = "image_featured">
-                    <img src="templates/images/lina.jpeg" width="400px" height="500px">
+                    <img src="templates/images/lina.jpg" width="400px" height="500px">
                   </div>
                   <div class = "profile_post_header">
                   <center>  <h1> Lina Park</h1> </center>
                   </div>
                   <center>  <h3> Full Stack Developer </h3> </center>
                     <p style="color: #ede6df;">
-                      lina bio text here
+                      Lina Park is from Puyallup, Washington and she will be attending the University
+                      of Washington, Seattle to major in Data Science/Informatics and possibly Computer Science.
                     </p>
                   </div>
                 </div>
@@ -112,7 +113,7 @@
                 </div>
               </div>
             </section>
-          <section>
+
       <footer class="page-footer">
           <div class="small-print">
             <div class="container">
@@ -146,8 +147,10 @@
                 <a  style="color:#96C0CE" href="https://www.handeland.tech">Erik Handeland,</a><a style="color:#96C0CE" href="https://www.facebook.com/jordan.huyghue"> Jordan Huyghue,</a> <a style="color:#96C0CE" href= "https://www.linkedin.com/in/lina-park-622857158/">Lina Park</a></p>
             </div>
           </div>
+        </br>
+      </br>
       </footer>
-      </section>
+      
 
 </body>
 </html>
