--- a/templates/friends.html
+++ b/templates/friends.html
@@ -45,7 +45,7 @@
 
       <div class="grid">
         <img class="friends_header" src="../templates/images/friends.jpg">
-          
+
       <div class="post_container">
             {% for all_post in friends_list %}
               <img src="data:image/jpg;base64,{{all_post.profile_pic}}" width="50px" height="50px"> <b> {{all_post.nickname}} </b> </br>
@@ -58,8 +58,8 @@
 
                       <p>
                         <b>Event Name: </b> {{each_post.post_name}} </br>
-                        <b>Location: </b> {{each_post.post_location}} </br>
-                        <b>Description: </b> {{each_post.post_event}}
+                        <i><b>Location: </b> {{each_post.post_location}} <b>Date:</b> {{each_post.post_date}}</i></br>
+                         {{each_post.post_event}}
                       </p>
               </div>
 
